[tool.poetry]
name = "django-valkey-backend"
version = "0.0.1"
description = "a backend for valkey database, based on django's redis backend"
authors = [
    { name="amirreza", email="amir.rsf1380@gmail.com"}
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "django=5.1",
    "valkey[libvalkey]=6.0.0"
]

[project.urls]
Homepage = "https://github.com/amirreza8002/django-valkey-backend"
Issues = "https://github.com/amirreza8002/django-valkey-backend/issues"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
valkey = {extras = ["libvalkey"], version = "^6.0.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
